Fix highlights positioning mobile
- highlights are not centered with user/bot choices on mobile

--- a/src/scss/_game-highlights.scss
+++ b/src/scss/_game-highlights.scss
@@ -12,7 +12,7 @@ $highlight-origin-left-tablet: 200px;
 $highlight-origin-right-tablet: 200px;
 
 .background-effects-container {
-  position: fixed;
+  position: relative;
   width: 100%;
 }
 
