--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,8 +6,8 @@ body {
   padding-top: 2rem;
   height: 100vh;
   width: 100vw;
-  box-sizing: border-box;
-  overflow: hidden;
+  // box-sizing: border-box;
+  overflow-x: hidden;
   background-image: radial-gradient(hsl(214, 47%, 23%), hsl(237, 49%, 15%));
   font-family: "Barlow Semi Condensed", sans-serif;
 }
@@ -20,11 +20,7 @@ p {
 }
 
 .attribution {
-  position: fixed;
-  bottom: 1rem;
-  left: 50%;
-  margin-left: -170px;
-  color: white;
+  display: none;
 }
 
 .attribution a {
@@ -36,6 +32,15 @@ p {
   .absolute-horizontal-center {
     left: 50%;
     margin-left: -384px;
+  }
+
+  .attribution {
+    display: inline;
+    position: fixed;
+    bottom: 1rem;
+    left: 50%;
+    margin-left: -170px;
+    color: white;
   }
 }
 
